--- a/src/app/workshop/login/login.component.html
+++ b/src/app/workshop/login/login.component.html
@@ -42,7 +42,7 @@
 
 
 
-    <div class="d-flex justify-content-end">
+    <div class="d-flex btn-responsive">
       <button type="submit" class="btn btn-theme btn-vertical-padding btn-horizontal-padding">GİRİŞ YAP</button>
     </div>
 
