--- a/src/app/workshop/comments/comments.component.html
+++ b/src/app/workshop/comments/comments.component.html
@@ -9,12 +9,12 @@
     <h5 *ngIf="GetHeaderMessage(tmp.id).length>0">{{tmp.header}}</h5>
     <div *ngFor="let msg of GetHeaderMessage(tmp.id)" class="mt-3">
       <div class="card card-theme box-shadow-sm border-radius-lg">
-        <div class="card-body p-2 d-flex justify-content-between">
+        <div class="card-body p-2 d-flex justify-content-between align-items-start">
           <div class="content">
             {{ msg.messageText }}
           </div>
           <button [disabled]="retroRight.commentRight <= 0" (click)="addCommentModal(msg)"
-            class="btn btn-theme btn-vertical-padding btn-horizontal-padding-md ml-3">Yorum Yap</button>
+            class="btn btn-theme btn-vertical-padding ml-3 btn-icon-text px-3"><span>Yorum Yap</span> <i class="fa fa-comment"></i></button>
         </div>
       </div>
       <div class="category__comments mt-3" *ngFor="let com of msg.comments">
