--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -32,7 +32,7 @@
         <i class="fa fa-user"></i>
         <span>Hoşgeldin, {{userName}}</span>
       </button>
-      <div class="dropdown-menu w-100" aria-labelledby="headerUserDropdown" style="border-radius: 30px;">
+      <div class="dropdown-menu w-100" aria-labelledby="headerUserDropdown" style="border-radius: 30px;    margin-top: 10px;">
        
         <a class="dropdown-item bg-transparent"  (click)="logout()">Çıkış Yap</a>
       </div>
