--- a/src/app/workshop/vote/vote.component.html
+++ b/src/app/workshop/vote/vote.component.html
@@ -16,7 +16,7 @@
           {{ message.messageText }}
         </div>
         <div class="card-actions d-flex justify-content-between text-nowrap">
-          <button (click)="getComment(message)" class="btn btn-theme btn-horizontal-padding-xs mr-2 d-sm-block d-none">
+          <button (click)="getComment(message)" class="btn btn-theme btn-horizontal-padding-xs mr-2 btn-list-comment">
             <i class="fa fa-comment-alt mr-2"></i>
             <div class="d-md-block d-none">Yorumlar</div>
             
