--- a/src/app/workshop/member-login/member-login.component.html
+++ b/src/app/workshop/member-login/member-login.component.html
@@ -1,4 +1,4 @@
-<div class="create-retro d-flex justify-content-end m-5" style="background-image: url('assets/img/retro-bg.png')">
+<div class="create-retro d-flex justify-content-end m-5 login-bg" style="background-image: url('assets/img/retro-bg.png')">
   <form [formGroup]="loginForm" (ngSubmit)="logIn()" class="create-retro__form">
 
 
