--- a/src/app/pages/retro-template/retro-template.component.html
+++ b/src/app/pages/retro-template/retro-template.component.html
@@ -1,1 +1,118 @@
 <app-tab-header></app-tab-header>
+<app-subject-header></app-subject-header>
+
+<div class="card-title">
+    <div class="row">
+      <div class="col-sm-6">
+      </div>
+      <div class="col-sm-6">
+        <button *ngIf="!isUser" type="button" data-toggle="modal" data-target="#addModal"
+        class=" float-right btn btn-theme btn-horizontal-padding btn-vertical-padding">
+          Şablon Ekle
+        </button>
+      
+      </div>
+    </div>
+  </div>
+  
+  
+  <div class="row mt-5" *ngIf="templates.length > 0">
+    <div class="col-sm-6 col-xs-12 mb-3" *ngFor="let template of templates; let i = index">
+      <a [class.disabled]="isUser" *ngIf="
+      template.templateDetail.length >= 1 &&
+      template.templateDetail[0].header != ''
+    " (click)="selectTemplate(template.id)" [ngClass]="{ active: selectTemplateId == template.id }">
+        <div class="card box-shadow card-theme d-flex justify-content-center align-items-center">
+          <h3 class="card-title mb-2 mt-2 text-secondary mini-btn">
+            <span class="align-baseline" *ngFor="let detail of template.templateDetail; let j = index">
+              {{ detail.header }}
+            </span>
+          </h3>
+        </div>
+      </a>
+      <a  [class.disabled]="isUser"  *ngIf="
+      template.templateDetail.length == 1 &&
+      template.templateDetail[0].header == ''
+    " (click)="selectTemplate(template.id)" [ngClass]="{ active: selectTemplateId == template.id }">
+        <div class="card box-shadow card-theme d-flex justify-content-center align-items-center">
+          <h3 class="card-title mb-2 mt-2 text-secondary">|
+            <span class="align-baseline" >
+              Şablonsuz devam et 
+            </span>
+          </h3>
+        </div>
+      </a>
+    </div>
+  
+  
+  </div>
+  
+  
+  <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+    aria-hidden="true">
+    <form #templateForm="ngForm" class="container mt-3" (ngSubmit)="saveTemplate()">
+      <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLongTitle">Yeni Şablon Ekle</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+  
+            <div class="form-group">
+              <label>Şirket</label>
+              <select class="form-control" disabled [(ngModel)]="data.companyId" [ngModelOptions]="{ standalone: true }">
+                <option value="" selected>Şirket Seçiniz</option>
+                <option [value]="company.id" *ngFor="let company of companys">{{company.companyName}}</option>
+  
+              </select>
+  
+            </div>
+            <button type="button" (click)="addHeader()" class="btn btn-block btn-outline-theme text-center btn-vertical-padding mb-3">
+              <i class="fa fa-plus"></i>
+            </button>
+            <div class="template-title">
+             
+              <div class="template-title-group" *ngFor="let header of headers; let i = index">
+                <div class="form-group">
+                  <label>Başlık</label>
+                  <input type="text" class="form-control" [(ngModel)]="header.header" name="header_{{ header.order }}"
+                    placeholder="Başlık Giriniz" />
+                </div>
+                <div class="template-title-group__utils">
+                  <div class="form-group">
+                    <label>Sıra</label>
+                    <select class="form-control" (change)="changeSort()" [(ngModel)]="header.order"
+                      name="order_{{ header.order }}" placeholder="Sıra">
+                      <option *ngFor="let i of orderlist; let i = index" [value]="i">
+                        {{ i }}
+                      </option>
+                    </select>
+                  </div>
+                  <div class="d-flex align-items-end pb-3 form-cancel">
+                    <button type="button" (click)="removeHeader(i)" class="btn btn-theme">
+                      <i class="fa fa-times"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+  
+            </div>
+  
+          </div>
+          <div class="modal-footer d-flex align-items-center">
+            <button type="button" class="btn btn-default btn-outline-theme btn-block btn-vertical-padding"
+              data-dismiss="modal">
+              Vazgeç
+            </button>
+            <button type="submit" class="btn btn-theme btn-block mt-0 btn-vertical-padding justify-content-center">
+              Kaydet
+            </button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+  
