--- a/src/app/shared/subject-header/subject-header.component.html
+++ b/src/app/shared/subject-header/subject-header.component.html
@@ -1,3 +1,8 @@
-<p>
-  subject-header works!
-</p>
+<div class="mb-3 mt-4 card card-theme box-shadow" *ngIf="  selectSubject.subjectTitle">
+  <div class="card-body">
+    <h3 class="card-title">{{ selectSubject.subjectTitle }}</h3>
+    <p class="card-description">
+      {{ selectSubject.subjectDescription }}
+    </p>
+  </div>
+</div>
