--- a/src/app/shared/tab-header/tab-header.component.html
+++ b/src/app/shared/tab-header/tab-header.component.html
@@ -1,51 +1,53 @@
+
+
 <ul class="header__retro-navigation tab-progress custom-slider-main" #widgetsContent role="tablist" >
   <li class="navigation-item active">
-    <a class="navigation-link select-subject" [class.disabled]="pathIndex==0?false:true"   [class.active]="isActive('/current/subject')"
-    (click)="clickTab('/current/template')"
+    <a class="navigation-link template subject"     [class.active]="isActive('/current/subject')"
+    (click)="clickTab('/current/subject',true)"
       >
       Konu Seç
     </a>
   </li>
   <li class="navigation-item">
-    <a class="navigation-link select-template" [class.disabled]="pathIndex>=1?true:false"    [class.active]="isActive('/current/template')"
-      (click)="clickTab('/current/brainstorm')"
+    <a class="navigation-link  template"    [class.active]="isActive('/current/template')"
+      (click)="clickTab('/current/template',true)"
      >
       Şablon Seç
     </a>
   </li>
 
   <li class="navigation-item">
-    <a class="navigation-link brainstorm" [class.disabled]="pathIndex>=2?true:false"  [class.active]="isActive('/current/brainstorm')"
-      (click)="clickTab('/current/categorize')"
+    <a class="navigation-link  brainstorm"    [class.active]="isActive('/current/brainstorm')"
+      (click)="clickTab('/current/brainstorm',true)"
       >
       Fikir Geliştir
     </a>
   </li>
   <li class="navigation-item">
   
-    <a class="navigation-link categorize" [class.disabled]="pathIndex>=3?true:false"  [class.active]="isActive('/current/categorize')"
-      (click)="clickTab('/current/comment')"
+    <a class="navigation-link  categorize"   [class.active]="isActive('/current/categorize')"
+      (click)="clickTab('/current/categorize',true)"
       >
       Kategorize Et
     </a>
   </li>
   <li class="navigation-item">
-    <a class="navigation-link comments" [class.disabled]="pathIndex>=4?true:false"  [class.active]="isActive('/current/comment')"
-      (click)="clickTab('/current/vote')">
+    <a class="navigation-link  categorize"  [class.active]="isActive('/current/comment')"
+      (click)="clickTab('/current/comment',true)">
       Yorum Yap
     </a>
   </li>
 
   <li class="navigation-item">
-    <a class="navigation-link vote"  [class.disabled]="pathIndex>=5?true:false"   [class.active]="isActive('/current/vote')"
-      (click)="clickTab('/current/report')">
+    <a class="navigation-link  comment"     [class.active]="isActive('/current/vote')"
+      (click)="clickTab('/current/vote',true)">
       Oyla
     </a>
   </li>
 
   <li class="navigation-item">
-    <a class="navigation-link idea-archive" [class.disabled]="pathIndex>=6?true:false"     [class.active]="isActive('/current/report')"
-      (click)="clickTab('/current/report')"
+    <a class="navigation-link  vote report finish"   [class.active]="isActive('/current/report')"
+      (click)="clickTab('/current/report',true)"
       >
       Raporla
     </a>
