--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
       </li>
 
 
-      <li class="sidebar__menu-item" *ngIf="isLeader() && currentRetro.id">
+      <li class="sidebar__menu-item" *ngIf="isLeader() && currentRetro && isCheckPage()" >
         <div class="sidebar__menu-item-content">
           <a (click)="copyLink()" class="sidebar__menu-link">
             <i class="fa fa-envelope"></i>
@@ -31,19 +31,20 @@
         </div>
       </li>
 
-      <!-- <li class="sidebar__menu-item" >
+      <li class="sidebar__menu-item" *ngIf="isLeader() && currentRetro && isCheckPage()" >
         <div class="sidebar__menu-item-content">
-          <a  class="sidebar__menu-link">
-            <i class="fa fa-envelope"></i>
-            <span>Örnek Linki</span>
+          <a (click)="showAnnouncement()" class="sidebar__menu-link">
+            <i class="fa fa-bullhorn"></i>
+            <span>Duyuru</span>
           </a>
         </div>
-      </li> -->
+      </li>
+
 
     </ul>
 
     <ng-container>
-      <div class="sidebar__participants" *ngIf="onlineUser.length>0">
+      <div class="sidebar__participants" *ngIf="onlineUser.length>0 &&  isShow " >
         <span class="sidebar__section-title">Aktif Katılımcılar</span>
         <ul class="sidebar__participant-list">
           <div style="max-height: 400px;overflow-y: scroll;height: auto;">
@@ -55,164 +56,51 @@
               </li>
             </div>
           </div>
-
-
         </ul>
       </div>
     </ng-container>
 
 
-    <ng-container>
-      <div class="sidebar__participants fixed-bottom mb-5" *ngIf="currentRetro">
 
 
-        <div class="row" *ngIf="isLeader()">
-          <div class="col-sm-12">
-            <div class="form-group">
+  </div>
 
-              <textarea class="form-control" style="height: auto !important;" rows="5"
-                (keydown.enter)="sendAnnouncement()" #titleInput></textarea>
+
+</div>
+
+
+<div id="announcementModal" class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Duyuru</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+          <div class=" mb-5" *ngIf="currentRetro && isCheckPage()" >
+    
+    
+            <div class="row" *ngIf="isLeader()">
+              <div class="col-sm-12">
+                <div class="form-group">
+    
+                  <textarea class="form-control" style="height: auto !important;" rows="5"
+                    (keydown.enter)="sendAnnouncement()" #titleInput></textarea>
+                </div>
+    
+    
+              </div>
             </div>
-
-
+          
+    
           </div>
-        </div>
-        <div class="row" *ngIf="isLeader()">
-          <div class="col-sm-12">
-            <button type="button" style="display: block !important;"
-              class="btn btn-theme btn-horizontal-padding btn-vertical-padding btn-block" [disabled]="!titleInput"
-              (click)="sendAnnouncement()">Gönder</button>
-          </div>
-        </div>
-
       </div>
-    </ng-container>
-
+      <div class="modal-footer">
+       
+        <button *ngIf="isLeader()" type="button" (click)="sendAnnouncement()"  class="btn btn-theme btn-vertical-padding ml-3 btn-icon-text px-3">Gönder</button>
+      </div>
+    </div>
   </div>
-
-
 </div>
-
-
-<!-- <div class="sidebar">
-  <div class="sidebar__header">
-    <div class="sidebar__header-content">
-      <img src="assets/img/logo.png" alt="" class="sidebar__logo">
-      <button class="btn btn-icon-theme" id="hideSidebar">
-        <i class="fa fa-angle-double-left"></i>
-      </button>
-    </div>
-  </div>
-  <div class="sidebar__content">
-    <ul class="sidebar__menu">
-      <li class="sidebar__menu-item" *ngFor="let menu of menuItems" routerLinkActive="active">
-        <div class="sidebar__menu-item-content">
-          <a [routerLink]="menu.path" class="sidebar__menu-link">
-            <i [class]="menu.icon" *ngIf="menu.icon"></i>
-            <span>{{ menu.title }}</span>
-          </a>
-        </div>
-      </li>
-    </ul>
-    <ng-container *ngIf="onlineUser.length>0">
-      <div class="sidebar__participants">
-        <span class="sidebar__section-title">Aktif Katılımcılar</span>
-        <ul class="sidebar__participant-list" *ngFor="let participant of onlineUser ">
-          <li class="sidebar__participant-list-item">
-            <img [src]="participant.avatar" alt="participant" class="avatar">
-            <span class="name">{{ participant.userName}}</span>
-          </li>
-        </ul>
-      </div>
-    </ng-container>
-  </div>
-</div> -->
-
-
-<!-- 
-
- <div class="logo">
-  <a href="#" class="simple-text logo-mini">
-    <div class="logo-image-small"></div>
-  </a>
-
-  <a href="#" class="simple-text logo-normal">
-    Workshop PRO
-  </a>
-</div>
-
-<div class="sidebar-wrapper">
-
-
-  <ul class="nav">
-    <li routerLinkActive="active" *ngFor="let menuitem of menuItems">
-      <a [routerLink]="[menuitem.path]" *ngIf="menuitem.type === 'link'">
-        <i class="{{ menuitem.icontype }}"></i>
-        <p>{{ menuitem.title }}</p>
-      </a>
-      
-      <a data-toggle="collapse" href="#{{ menuitem.title }}" *ngIf="menuitem.type === 'sub'">
-        <i class="{{ menuitem.icontype }}"></i>
-        <p>{{ menuitem.title }}<b class="caret"></b></p>
-      </a>
-
-      
-
-      <div id="{{ menuitem.title }}" class="collapse" *ngIf="menuitem.type === 'sub'">
-        <ul class="nav">
-          <li routerLinkActive="active" *ngFor="let childitem of menuitem.children">
-            <a [routerLink]="[menuitem.path, childitem.path]">
-              <span class="sidebar-mini-icon">{{ childitem.ab }}</span>
-              <span class="sidebar-normal">{{ childitem.title }}</span>
-            </a>
-          </li>
-
-     
-        </ul>
-      </div>
-    </li>
-
-    <li *ngIf="isLeader() && currentRetro.id" >
-      <a (click)="copyLink()">
-        <i class="fa fa-envelope"></i>
-        <p>Davet Linki</p>
-      </a>
-    </li>
-  </ul>
- 
-  <ul class="nav online-user" *ngIf="users.length>0" >
-
-    <div style="max-height:50vh; overflow-y: scroll;">
-      <div *ngFor="let user of users">
-
-
-        <li *ngIf="onlineExist(user)">
-          <a href="#" class="text-success">
-            <i class="nc-icon nc-circle-10 " class="text-success"></i>
-            <p class="hidden-md hidden-lg">
-              {{user.userName}}
-            </p>
-          </a>
-        </li>
-      </div>
-    </div>
-
-  </ul>
-
-  <div class="nav online-user" style="bottom:10px;padding: 10px;" *ngIf="currentRetro">
-   
-    <div class="row" *ngIf="isLeader()">
-      <div class="col-sm-12">
-        <textarea rows="5" (keydown.enter)="sendAnnouncement()"   #titleInput style="width: 100%;">
-
-         </textarea>
-      </div>
-    </div>
-    <div class="row" *ngIf="isLeader()">
-      <div class="col-sm-12">
-        <button type="button" class="btn btn-success btn-block" [disabled]="!titleInput" (click)="sendAnnouncement()">Gönder</button>
-      </div>
-    </div>
-  </div>
-
-</div>  -->
