--- a/src/app/workshop/member-login/member-login.component.html
+++ b/src/app/workshop/member-login/member-login.component.html
@@ -13,6 +13,7 @@
       <div
         *ngIf="(loginForm.get('alias').invalid && ( loginForm.get('alias').touched) || loginForm.get('alias').dirty)">
         <small *ngIf="loginForm.get('alias').errors?.required" class="text-danger">Takma ad giriniz</small>
+        <small *ngIf="loginForm.get('alias').errors?.pattern" class="text-danger">Takma ad için sadece ingilizce karakterler giriniz</small>
       </div>
     </div>
 
