--- a/src/app/workshop/retro-finish/retro-finish.component.html
+++ b/src/app/workshop/retro-finish/retro-finish.component.html
@@ -1,9 +1,12 @@
-<div class="create-retro d-flex justify-content-end m-5 login-bg" style="background-image: url('assets/img/retro-bg.png')">
+<div class="create-retro d-flex justify-content-end m-5 login-bg"
+    style="background-image: url('assets/img/retro-bg.png')">
 
 
-    <h3 class="text-center mb-5">Atölyemiz sona ermiştir. Katılımınız için teşekkür ederiz.</h3>
+    <h3 class="text-center mb-5">Atölyemiz sona ermiştir. Katılımınız için teşekkür ederiz.
+    <br>
+    
+    </h3>
 
-  
+   
 </div>
-
 
