--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -22,7 +22,7 @@
       </li>
 
 
-      <li class="sidebar__menu-item" *ngIf="isLeader() && currentRetro && isCheckPage()" >
+      <li class="sidebar__menu-item" *ngIf="isLeader()  && isCheckPage()" >
         <div class="sidebar__menu-item-content">
           <a (click)="copyLink()" class="sidebar__menu-link">
             <i class="fa fa-envelope"></i>
@@ -31,7 +31,7 @@
         </div>
       </li>
 
-      <li class="sidebar__menu-item" *ngIf="isLeader() && currentRetro && isCheckPage()" >
+      <li class="sidebar__menu-item" *ngIf="isLeader() && isCheckPage()" >
         <div class="sidebar__menu-item-content">
           <a (click)="showAnnouncement()" class="sidebar__menu-link">
             <i class="fa fa-bullhorn"></i>
@@ -47,12 +47,17 @@
       <div class="sidebar__participants" *ngIf="onlineUser.length>0 &&  isShow " >
         <span class="sidebar__section-title">Aktif Katılımcılar</span>
         <ul class="sidebar__participant-list">
-          <div style="max-height: 400px;overflow-y: scroll;height: auto;">
+          <div >
             <div *ngFor="let user of onlineUser">
               <li class="sidebar__participant-list-item mt-3" *ngIf="onlineExist(user)">
                 <i class="fa fa-user" class="text-success"></i>
-                <span class="name"> <span class="name-short">{{getShortName(user)}}</span> {{user.name}}
-                  {{user.surname}}</span>
+                <span class="name">
+                   <span class="name-short">{{getShortName(user)}}</span> 
+                   <span class="full-username">
+ {{user.name}}
+ {{user.surname}}
+                   </span>
+                 </span>
               </li>
             </div>
           </div>
